--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">這局換我凱格爾</string>
-    <string name="ic_record">紀錄</string>
+    <string name="ic_home">主頁</string>
     <string name="ic_pet">寵物</string>
     <string name="ic_train">開始訓練</string>
     <string name="ic_plus">PLUS</string>
